--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,16 @@ dl {
     text-align: center;
     box-sizing: border-box;
 }
-
+.overlay {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    width: 300px;
+    height: 400px;
+    border: 2px solid red;
+    box-sizing: border-box;
+    pointer-events: none;
+}
 dt {
     margin: 30px auto 10px;
     padding-bottom: 5px;
